# magnit-service

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
observability/: prometheus.yml
service/: Dockerfile  main.py  schemas.py  worker.py
tests/: test_main.py
