[tool.poetry]
name = "magnit"
version = "0.1.0"
description = ""
authors = ["Roman Milovanov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
requests = "^2.28.1"
celery = "^5.2.7"
redis = "^4.3.4"
flower = "^1.2.0"
prometheus-fastapi-instrumentator = "^5.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mock = "^4.0.3"
black = {version = "^22.10.0", allow-prereleases = true}
pylint = "^2.15.5"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "service",
]